--- a/client/lab_3/styles.css
+++ b/client/lab_3/styles.css
@@ -1,1 +1,200 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.header_name {
+    background-color: rgb(56, 168, 56);
+}
+
+.menu-container {
+    color: #fff;
+    background-color: #5995DA; /* blue */
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.menu {
+    border: 1px solid #fff;
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.links {
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: flex-end;
+    color: blanchedalmond;
+}
+
+.Main_Page {
+    margin-left: 20px;
+}
+
+.header-container {
+    color: #5995DA;
+    background-color: #d6e9fe;
+    display: flex;
+    justify-content: center;
+}
+
+.header {
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social,
+.logo,
+.subscribe {
+    border: 1px solid #5995DA;
+}
+
+.photo-grid-container {
+    display: flex;
+    justify-content: center;
+}
+
+.photo-grid {
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+.photo-grid-item {
+    border: 1px solid #fff;
+    width: 300px;
+    height: 300px;
+}
+
+.first-item {
+    order: 1;
+}
+
+.last-item {
+    order: -1;
+}
+
+.social,
+.subscribe {
+    align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-one,
+.footer-three {
+    background-color: #5995DA;
+    flex-direction: initial;
+    width: 300px;
+}
+
+.Database_Demos {
+    margin-left: auto;
+    color: blanchedalmond;
+}
+
+.page {
+    display: flex;
+    flex-wrap: wrap;
+}
+.section {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu {
+    background-color: #5995DA;
+    height: 80px;
+}
+
+.header {
+    background-color: #B2D6FF;
+}
+
+.content {
+    background-color: #EAED50;
+    height: 600px;
+}
+
+.sign-up {
+    background-color: #D6E9FE;
+}
+
+.feature-1 {
+    background-color: F5CF8E;
+}
+
+.feature-2 {
+    background-color: #F09A9D;
+}
+
+.feature-3 {
+    background-color: #C8C6FA;
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 400px)  {
+    body {
+        background-color: rgb(231, 111, 111);
+    }
+
+}
+
+/* Tablet */
+
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+    body {
+        background-color: lightyellow;
+    }
+    .sign-up,
+    .feature-1,
+    .feature-2,
+    .feature-3 {
+        width: 50%;
+    }
+}
+
+/* PC */
+
+@media only screen and (min-width: 961px) {
+    body {
+        background-color: lightblue;
+    }
+    .page {
+        width: 960px;
+        margin: 0 auto;
+    }
+    .feature-1,
+    .feature-2,
+    .feature-3 {
+        width: 33.3%;
+    }
+    .header {
+        height: 400px;
+    }
+}
 
