Changed code off local

--- a/client/lab_6/styles.css
+++ b/client/lab_6/styles.css
@@ -18,16 +18,16 @@
   }
   
   /* Page Layout */
-  .columns {
+  .search {
     display: flex;
     flex-wrap: wrap;
   }
   
-  .wrapper {
+  .label {
     display: flex;
   }
   
-  .container {
+  .suggestions {
     max-width: 960px;
     margin-top: 25px;
   }
